5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1831_3181.log
== TEST (2019-06-13 16:23:48) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
	b[0] += 1
print(b)
-- ERROR:
File "XXXX", line 6
    b[0] += 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:53) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:21) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[i-1] +=1	
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:49) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
		
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:45) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11] +=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28
		b[27]+=1
	if a[i]==29
		b[28]+=1
	if a[i]==30
		b[29]+=1
	if a[i]==31
		b[30]+=1
	if a[i]==32
		b[31]+=1
	if a[i]==33
		b[32]+=1
	if a[i]==34
		b[33]+=1
	if a[i]==35
		b[34]+=1
	if a[i]==36
		b[35]+=1
print(b)
-- ERROR:
File "XXXX", line 59
    if a[i]==28
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:54) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28
		b[27]+=1
	if a[i]==29
		b[28]+=1
	if a[i]==30
		b[29]+=1
	if a[i]==31
		b[30]+=1
	if a[i]==32
		b[31]+=1
	if a[i]==33
		b[32]+=1
	if a[i]==34
		b[33]+=1
	if a[i]==35
		b[34]+=1
	if a[i]==36
		b[35]+=1
print(b)
-- ERROR:
File "XXXX", line 59
    if a[i]==28
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:10) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28:
		b[27]+=1
	if a[i]==29:
		b[28]+=1
	if a[i]==30:
		b[29]+=1
	if a[i]==31:
		b[30]+=1
	if a[i]==32:
		b[31]+=1
	if a[i]==33:
		b[32]+=1
	if a[i]==34:
		b[33]+=1
	if a[i]==35:
		b[34]+=1
	if a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:35:23) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28:
		b[27]+=1
	if a[i]==29:
		b[28]+=1
	if a[i]==30:
		b[29]+=1
	if a[i]==31:
		b[30]+=1
	if a[i]==32:
		b[31]+=1
	if a[i]==33:
		b[32]+=1
	if a[i]==34:
		b[33]+=1
	if a[i]==35:
		b[34]+=1
	if a[i]==36:
		b[35]+=1
print(b)
-- EXECUTION TIME:
0.927883
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:35:51) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(35, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28:
		b[27]+=1
	if a[i]==29:
		b[28]+=1
	if a[i]==30:
		b[29]+=1
	if a[i]==31:
		b[30]+=1
	if a[i]==32:
		b[31]+=1
	if a[i]==33:
		b[32]+=1
	if a[i]==34:
		b[33]+=1
	if a[i]==35:
		b[34]+=1
	if a[i]==36:
		b[35]+=1
print(b)
-- EXECUTION TIME:
0.842113
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:52) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(35, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28:
		b[27]+=1
	if a[i]==29:
		b[28]+=1
	if a[i]==30:
		b[29]+=1
	if a[i]==31:
		b[30]+=1
	if a[i]==32:
		b[31]+=1
	if a[i]==33:
		b[32]+=1
	if a[i]==34:
		b[33]+=1
	if a[i]==35:
		b[34]+=1
	if a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:04) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28:
		b[27]+=1
	if a[i]==29:
		b[28]+=1
	if a[i]==30:
		b[29]+=1
	if a[i]==31:
		b[30]+=1
	if a[i]==32:
		b[31]+=1
	if a[i]==33:
		b[32]+=1
	if a[i]==34:
		b[33]+=1
	if a[i]==35:
		b[34]+=1
	if a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:21) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(37, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28:
		b[27]+=1
	if a[i]==29:
		b[28]+=1
	if a[i]==30:
		b[29]+=1
	if a[i]==31:
		b[30]+=1
	if a[i]==32:
		b[31]+=1
	if a[i]==33:
		b[32]+=1
	if a[i]==34:
		b[33]+=1
	if a[i]==35:
		b[34]+=1
	if a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:48) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	if a[i] == 2:
		b[1] +=1
	if a[i] == 3:
		b[2] +=1
	if a[i] == 4:
		b[3] +=1
	if a[i] ==5:
		b[4] +=1
	if a[i]==6:
		b[5]+=1
	if a[i]==7:
		b[6]+=1
	if a[i]==8:
		b[7]+=1
	if a[i]==9:
		b[8]+=1
	if a[i]==10:
		b[9]+=1
	if a[i]==11:
		b[10]+=1
	if a[i] == 12:
		b[11]+=1
	if a[i]==13:
		b[12]==1
	if a[i]== 14:
		b[13]+=1
	if a[i]==15:
		b[14] +=1
	if a[i]==16:
		b[15]+=1
	if a[i]==17:
		b[16]+=1
	if a[i]==18:
		b[17]+=1
	if a[i]==19:
		b[18]+=1
	if a[i]==20:
		b[19]+=1
	if a[i]==21:
		b[20]+=1
	if a[i]==22:
		b[21]+=1
	if a[i]==23:
		b[22]+=1
	if a[i]==24:
		b[23]+=1
	if a[i]==25:
		b[24]+=1
	if a[i]==26:
		b[25]+=1
	if a[i]==27:
		b[26]+=1
	if a[i]==28:
		b[27]+=1
	if a[i]==29:
		b[28]+=1
	if a[i]==30:
		b[29]+=1
	if a[i]==31:
		b[30]+=1
	if a[i]==32:
		b[31]+=1
	if a[i]==33:
		b[32]+=1
	if a[i]==34:
		b[33]+=1
	if a[i]==35:
		b[34]+=1
	if a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:53) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	if a[i] == 2:
		b[2] +=1
	if a[i] == 3:
		b[3] +=1
	if a[i] == 4:
		b[4] +=1
	if a[i] ==5:
		b[5] +=1
	if a[i]==6:
		b[6]+=1
	if a[i]==7:
		b[7]+=1
	if a[i]==8:
		b[8]+=1
	if a[i]==9:
		b[9]+=1
	if a[i]==10:
		b[10]+=1
	if a[i]==11:
		b[11]+=1
	if a[i] == 12:
		b[12]+=1
	if a[i]==13:
		b[13]==1
	if a[i]== 14:
		b[14]+=1
	if a[i]==15:
		b[15] +=1
	if a[i]==16:
		b[16]+=1
	if a[i]==17:
		b[17]+=1
	if a[i]==18:
		b[18]+=1
	if a[i]==19:
		b[19]+=1
	if a[i]==20:
		b[20]+=1
	if a[i]==21:
		b[21]+=1
	if a[i]==22:
		b[22]+=1
	if a[i]==23:
		b[23]+=1
	if a[i]==24:
		b[24]+=1
	if a[i]==25:
		b[25]+=1
	if a[i]==26:
		b[26]+=1
	if a[i]==27:
		b[27]+=1
	if a[i]==28:
		b[28]+=1
	if a[i]==29:
		b[29]+=1
	if a[i]==30:
		b[30]+=1
	if a[i]==31:
		b[31]+=1
	if a[i]==32:
		b[32]+=1
	if a[i]==33:
		b[33]+=1
	if a[i]==34:
		b[34]+=1
	if a[i]==35:
		b[35]+=1
	if a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:38:00) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	if a[i] == 2:
		b[2] +=1
	if a[i] == 3:
		b[3] +=1
	if a[i] == 4:
		b[4] +=1
	if a[i] ==5:
		b[5] +=1
	if a[i]==6:
		b[6]+=1
	if a[i]==7:
		b[7]+=1
	if a[i]==8:
		b[8]+=1
	if a[i]==9:
		b[9]+=1
	if a[i]==10:
		b[10]+=1
	if a[i]==11:
		b[11]+=1
	if a[i] == 12:
		b[12]+=1
	if a[i]==13:
		b[13]==1
	if a[i]== 14:
		b[14]+=1
	if a[i]==15:
		b[15] +=1
	if a[i]==16:
		b[16]+=1
	if a[i]==17:
		b[17]+=1
	if a[i]==18:
		b[18]+=1
	if a[i]==19:
		b[19]+=1
	if a[i]==20:
		b[20]+=1
	if a[i]==21:
		b[21]+=1
	if a[i]==22:
		b[22]+=1
	if a[i]==23:
		b[23]+=1
	if a[i]==24:
		b[24]+=1
	if a[i]==25:
		b[25]+=1
	if a[i]==26:
		b[26]+=1
	if a[i]==27:
		b[27]+=1
	if a[i]==28:
		b[28]+=1
	if a[i]==29:
		b[29]+=1
	if a[i]==30:
		b[30]+=1
	if a[i]==31:
		b[31]+=1
	if a[i]==32:
		b[32]+=1
	if a[i]==33:
		b[33]+=1
	if a[i]==34:
		b[34]+=1
	if a[i]==35:
		b[35]+=1
	if a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
0.909064
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[0 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:05) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	if a[i] == 2:
		b[2] +=1
	if a[i] == 3:
		b[3] +=1
	if a[i] == 4:
		b[4] +=1
	if a[i] ==5:
		b[5] +=1
	if a[i]==6:
		b[6]+=1
	if a[i]==7:
		b[7]+=1
	if a[i]==8:
		b[8]+=1
	if a[i]==9:
		b[9]+=1
	if a[i]==10:
		b[10]+=1
	if a[i]==11:
		b[11]+=1
	if a[i] == 12:
		b[12]+=1
	if a[i]==13:
		b[13]==1
	if a[i]== 14:
		b[14]+=1
	if a[i]==15:
		b[15] +=1
	if a[i]==16:
		b[16]+=1
	if a[i]==17:
		b[17]+=1
	if a[i]==18:
		b[18]+=1
	if a[i]==19:
		b[19]+=1
	if a[i]==20:
		b[20]+=1
	if a[i]==21:
		b[21]+=1
	if a[i]==22:
		b[22]+=1
	if a[i]==23:
		b[23]+=1
	if a[i]==24:
		b[24]+=1
	if a[i]==25:
		b[25]+=1
	if a[i]==26:
		b[26]+=1
	if a[i]==27:
		b[27]+=1
	if a[i]==28:
		b[28]+=1
	if a[i]==29:
		b[29]+=1
	if a[i]==30:
		b[30]+=1
	if a[i]==31:
		b[31]+=1
	if a[i]==32:
		b[32]+=1
	if a[i]==33:
		b[33]+=1
	if a[i]==34:
		b[34]+=1
	if a[i]==35:
		b[35]+=1
	if a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:38:44) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(35, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	if a[i] == 2:
		b[2] +=1
	if a[i] == 3:
		b[3] +=1
	if a[i] == 4:
		b[4] +=1
	if a[i] ==5:
		b[5] +=1
	if a[i]==6:
		b[6]+=1
	if a[i]==7:
		b[7]+=1
	if a[i]==8:
		b[8]+=1
	if a[i]==9:
		b[9]+=1
	if a[i]==10:
		b[10]+=1
	if a[i]==11:
		b[11]+=1
	if a[i] == 12:
		b[12]+=1
	if a[i]==13:
		b[13]==1
	if a[i]== 14:
		b[14]+=1
	if a[i]==15:
		b[15] +=1
	if a[i]==16:
		b[16]+=1
	if a[i]==17:
		b[17]+=1
	if a[i]==18:
		b[18]+=1
	if a[i]==19:
		b[19]+=1
	if a[i]==20:
		b[20]+=1
	if a[i]==21:
		b[21]+=1
	if a[i]==22:
		b[22]+=1
	if a[i]==23:
		b[23]+=1
	if a[i]==24:
		b[24]+=1
	if a[i]==25:
		b[25]+=1
	if a[i]==26:
		b[26]+=1
	if a[i]==27:
		b[27]+=1
	if a[i]==28:
		b[28]+=1
	if a[i]==29:
		b[29]+=1
	if a[i]==30:
		b[30]+=1
	if a[i]==31:
		b[31]+=1
	if a[i]==32:
		b[32]+=1
	if a[i]==33:
		b[33]+=1
	if a[i]==34:
		b[34]+=1
	if a[i]==35:
		b[35]+=1
	if a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
1.02065
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[0 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:38:45) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(35, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	if a[i] == 2:
		b[2] +=1
	if a[i] == 3:
		b[3] +=1
	if a[i] == 4:
		b[4] +=1
	if a[i] ==5:
		b[5] +=1
	if a[i]==6:
		b[6]+=1
	if a[i]==7:
		b[7]+=1
	if a[i]==8:
		b[8]+=1
	if a[i]==9:
		b[9]+=1
	if a[i]==10:
		b[10]+=1
	if a[i]==11:
		b[11]+=1
	if a[i] == 12:
		b[12]+=1
	if a[i]==13:
		b[13]==1
	if a[i]== 14:
		b[14]+=1
	if a[i]==15:
		b[15] +=1
	if a[i]==16:
		b[16]+=1
	if a[i]==17:
		b[17]+=1
	if a[i]==18:
		b[18]+=1
	if a[i]==19:
		b[19]+=1
	if a[i]==20:
		b[20]+=1
	if a[i]==21:
		b[21]+=1
	if a[i]==22:
		b[22]+=1
	if a[i]==23:
		b[23]+=1
	if a[i]==24:
		b[24]+=1
	if a[i]==25:
		b[25]+=1
	if a[i]==26:
		b[26]+=1
	if a[i]==27:
		b[27]+=1
	if a[i]==28:
		b[28]+=1
	if a[i]==29:
		b[29]+=1
	if a[i]==30:
		b[30]+=1
	if a[i]==31:
		b[31]+=1
	if a[i]==32:
		b[32]+=1
	if a[i]==33:
		b[33]+=1
	if a[i]==34:
		b[34]+=1
	if a[i]==35:
		b[35]+=1
	if a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:39:22) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	if a[i] == 2:
		b[2] +=1
	if a[i] == 3:
		b[3] +=1
	if a[i] == 4:
		b[4] +=1
	if a[i] ==5:
		b[5] +=1
	if a[i]==6:
		b[6]+=1
	if a[i]==7:
		b[7]+=1
	if a[i]==8:
		b[8]+=1
	if a[i]==9:
		b[9]+=1
	if a[i]==10:
		b[10]+=1
	if a[i]==11:
		b[11]+=1
	if a[i] == 12:
		b[12]+=1
	if a[i]==13:
		b[13]==1
	if a[i]== 14:
		b[14]+=1
	if a[i]==15:
		b[15] +=1
	if a[i]==16:
		b[16]+=1
	if a[i]==17:
		b[17]+=1
	if a[i]==18:
		b[18]+=1
	if a[i]==19:
		b[19]+=1
	if a[i]==20:
		b[20]+=1
	if a[i]==21:
		b[21]+=1
	if a[i]==22:
		b[22]+=1
	if a[i]==23:
		b[23]+=1
	if a[i]==24:
		b[24]+=1
	if a[i]==25:
		b[25]+=1
	if a[i]==26:
		b[26]+=1
	if a[i]==27:
		b[27]+=1
	if a[i]==28:
		b[28]+=1
	if a[i]==29:
		b[29]+=1
	if a[i]==30:
		b[30]+=1
	if a[i]==31:
		b[31]+=1
	if a[i]==32:
		b[32]+=1
	if a[i]==33:
		b[33]+=1
	if a[i]==34:
		b[34]+=1
	if a[i]==35:
		b[35]+=1
	if a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
0.970027
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[0 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:35) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:47) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:57) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:14) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
1.07456
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[0 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:35) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:41:40) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
1.06501
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[0 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:02) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
	else:
		
print(b)
-- ERROR:
File "XXXX", line 79
    print(b)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:08) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:43:52) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
0.896779
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[0 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:23) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:46:30) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:47:02) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- EXECUTION TIME:
0.992684
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:03) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:47:37) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(35, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:01) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:08) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:41) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:49:22) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i] == 1: 
		b[0] += 1
	elif a[i] == 2:
		b[1] +=1
	elif a[i] == 3:
		b[2] +=1
	elif a[i] == 4:
		b[3] +=1
	elif a[i] ==5:
		b[4] +=1
	elif a[i]==6:
		b[5]+=1
	elif a[i]==7:
		b[6]+=1
	elif a[i]==8:
		b[7]+=1
	elif a[i]==9:
		b[8]+=1
	elif a[i]==10:
		b[9]+=1
	elif a[i]==11:
		b[10]+=1
	elif a[i] == 12:
		b[11]+=1
	elif a[i]==13:
		b[12]==1
	elif a[i]== 14:
		b[13]+=1
	elif a[i]==15:
		b[14] +=1
	elif a[i]==16:
		b[15]+=1
	elif a[i]==17:
		b[16]+=1
	elif a[i]==18:
		b[17]+=1
	elif a[i]==19:
		b[18]+=1
	elif a[i]==20:
		b[19]+=1
	elif a[i]==21:
		b[20]+=1
	elif a[i]==22:
		b[21]+=1
	elif a[i]==23:
		b[22]+=1
	elif a[i]==24:
		b[23]+=1
	elif a[i]==25:
		b[24]+=1
	elif a[i]==26:
		b[25]+=1
	elif a[i]==27:
		b[26]+=1
	elif a[i]==28:
		b[27]+=1
	elif a[i]==29:
		b[28]+=1
	elif a[i]==30:
		b[29]+=1
	elif a[i]==31:
		b[30]+=1
	elif a[i]==32:
		b[31]+=1
	elif a[i]==33:
		b[32]+=1
	elif a[i]==34:
		b[33]+=1
	elif a[i]==35:
		b[34]+=1
	elif a[i]==36:
		b[35]+=1
print(b)
-- EXECUTION TIME:
0.740069
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:13) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i]==0:
		b[0]+=1
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
0.851887
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:13) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i]==0:
		b[0]+=1
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:46) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(36, dtype=int)
for i in range(size(a)):
	if a[i]==0:
		b[0]+=1
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:55:03) 
-- CODE:
from numpy import*
a = array(eval(input()))
b = zeros(37, dtype=int)
for i in range(size(a)):
	if a[i]==0:
		b[0]+=1
	if a[i] == 1: 
		b[1] += 1
	elif a[i] == 2:
		b[2] +=1
	elif a[i] == 3:
		b[3] +=1
	elif a[i] == 4:
		b[4] +=1
	elif a[i] ==5:
		b[5] +=1
	elif a[i]==6:
		b[6]+=1
	elif a[i]==7:
		b[7]+=1
	elif a[i]==8:
		b[8]+=1
	elif a[i]==9:
		b[9]+=1
	elif a[i]==10:
		b[10]+=1
	elif a[i]==11:
		b[11]+=1
	elif a[i] == 12:
		b[12]+=1
	elif a[i]==13:
		b[13]==1
	elif a[i]== 14:
		b[14]+=1
	elif a[i]==15:
		b[15] +=1
	elif a[i]==16:
		b[16]+=1
	elif a[i]==17:
		b[17]+=1
	elif a[i]==18:
		b[18]+=1
	elif a[i]==19:
		b[19]+=1
	elif a[i]==20:
		b[20]+=1
	elif a[i]==21:
		b[21]+=1
	elif a[i]==22:
		b[22]+=1
	elif a[i]==23:
		b[23]+=1
	elif a[i]==24:
		b[24]+=1
	elif a[i]==25:
		b[25]+=1
	elif a[i]==26:
		b[26]+=1
	elif a[i]==27:
		b[27]+=1
	elif a[i]==28:
		b[28]+=1
	elif a[i]==29:
		b[29]+=1
	elif a[i]==30:
		b[30]+=1
	elif a[i]==31:
		b[31]+=1
	elif a[i]==32:
		b[32]+=1
	elif a[i]==33:
		b[33]+=1
	elif a[i]==34:
		b[34]+=1
	elif a[i]==35:
		b[35]+=1
	elif a[i]==36:
		b[36]+=1
print(b)
-- EXECUTION TIME:
1.05303
-- TEST CASE 1:
---- input:
[1,2,3,34,1,0]
---- correct output:
 [1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
---- user output:
[1 2 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0]
-- TEST CASE 2:
---- input:
[22,22,0,0,16]
---- correct output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[1,2,3,4,5,6,7,8,1,2,3,4,5,6,7,8]
---- correct output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
---- user output:
[0 2 2 2 2 2 2 2 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
